switch-toggle: new component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-canvas></app-canvas>
 <app-header></app-header>
+<app-togle></app-togle>
 <app-timeline></app-timeline>
 <app-navigation-bar></app-navigation-bar>
