--- a/src/app/components/canvas/canvas.component.html
+++ b/src/app/components/canvas/canvas.component.html
@@ -3,12 +3,21 @@
 <div class="canvas-info">
   <div class="canvas-info--title">About object</div>
   <div class="canvas-info--id">Element id: {{ elementID }} </div>
-  <div class="canvas-info--model">Model: {{ model }} </div>
+  <!-- <div class="canvas-info--model">Model: {{ model }} </div>
   <div class="canvas-info--xyz">xyz: {{ xyz }} </div>
+  <div class="canvas-info--textarea">Insert your comment </div> -->
+
+  <div class="canvas-info--model">Family: {{ family }} </div>
+  <div class="canvas-info--xyz">Length: {{ length }} </div>
   <div class="canvas-info--textarea">Insert your comment </div>
   <textarea
     class="canvas-info--textarea-box"
     cols="30"
     rows="10">
   </textarea>
+
+  <!-- <div *ngFor="let item of items">
+    <div class="canvas-info--model">Family: {{ item.family }} </div>
+    <div class="canvas-info--xyz">Length: {{ item.length }} </div>
+  </div> -->
 </div>
