--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -1,3 +1,5 @@
+/* Timeline */
+
 $timeline-line-color: #ddd !default;
 $timeline-line-stop-color: rgb(153, 153, 153) !default;
 $timeline-line-border-color: rgb(124, 121, 121) !default;
