toggle: add click event

--- a/src/app/components/canvas/canvas.component.html
+++ b/src/app/components/canvas/canvas.component.html
@@ -7,8 +7,8 @@
   <div class="canvas-info--xyz">xyz: {{ xyz }} </div>
   <div class="canvas-info--textarea">Insert your comment </div> -->
 
-  <div class="canvas-info--model">Family: {{ family }} </div>
-  <div class="canvas-info--xyz">Length: {{ length }} </div>
+  <!-- <div class="canvas-info--model">Family: {{ family }} </div>
+  <div class="canvas-info--xyz">Length: {{ length }} </div> -->
   <div class="canvas-info--textarea">Insert your comment </div>
   <textarea
     class="canvas-info--textarea-box"
